<resources>
    <string name="app_name">ChawlaShop</string>
    <string name="my_app_name">Welcome To Salad Bar</string>
    <string name="click_Me">Click Me for Salad Experience</string>
    <string name="place_order">Place Order</string>
    <string name="salad_name">Salad name</string>
    <string name="salad_description">Salad Description</string>
    <string name="thank_message">Thank You for Placing the order</string>
    <string name="general_text_price_before_tax">Price Before Tax : </string>
    <string name="general_text_tax_gst">GST Tax : </string>
    <string name="general_text_tax_qst">QST Tax : </string>
    <string name="general_text_price_after_tax">Overall Total : </string>
    <string name="default_curreny_value">0 CAD</string>
    <string name="salad1_title">SEARED TUNA SALAD</string>
    <string name="salad1_description">mixed greens, arugula, kale, avocado, cucumber, edamame, super slaw, apples, tempura onions, toasted sesame seeds, spicy togarashi seared tuna</string>
    <string name="salad2_title">ASIAN SALAD</string>
    <string name="salad2_description">romaine lettuce, mixed greens, avocado, mandarin oranges, cherry tomatoes, shredded carrots, crunchy noodles, toasted sesame seeds</string>
    <string name="salad3_title">CAESAR SALAD</string>
    <string name="salad3_description">kale, romaine lettuce, baked pita chips, mozzarella, shaved parmesan, bacon, free run hard boiled egg</string>
    <string name="salad4_title">HARVEST SALAD</string>
    <string name="salad4_description">romaine lettuce, mixed greens, cherry tomatoes, roasted sweet potato, dried cranberries, pecans, pumpkin seeds, goat cheese</string>
    <string name="salad5_title">Tokyo Salad</string>
    <string name="salad5_description">romaine lettuce, mixed greens, shredded carrots, broccoli, cucumber, avocado, purple cabbage, toasted sesame seeds, tamari citrus tofu</string>
    <string name="salad6_title">Cobb Salad</string>
    <string name="salad6_description">romaine lettuce, mixed greens, cherry tomatoes, avocado, green onions, mushrooms, baked pita chips, bacon, free run hard boiled egg</string>
    <string name="salad7_title">Endless Summer</string>
    <string name="salad7_description">romaine lettuce, mixed greens, kale, quinoa, shredded carrots, cucumber, avocado, tempura onions, pomegranate seeds, sesame seeds, cilantro, basil, tamari mock chicken</string>
    <string name="salad8_title">Habibi</string>
    <string name="salad8_description">romaine lettuce, mixed greens, quinoa, parsley, mint, chickpeas, roasted sweet potato, cherry tomatoes, cucumbers, red onion, feta</string>
    <string name="salad9_title">The Wolfe</string>
    <string name="salad9_description">mixed greens, arugula, kale, quinoa, cherry tomatoes, avocado, shredded carrots, toasted walnuts, toasted sesame seeds, shaved parmesan</string>
    <string name="salad10_title">The Clean Green</string>
    <string name="salad10_description">romaine lettuce, mixed greens, basil, cilantro, mint, broccoli, cucumber, edamame, purple cabbage, green onions, pumpkin seeds</string>
    <string name="title_activity_floating_action">Menu</string>
    <string name="currency">CAD</string>
    <string name="item_added_text">Item added :</string>
    <string name="item_removed_text">Item removed :</string>
    <string name="product_price_text"> Price of product : </string>
    <string name="shipping_alert">Shipping Alert</string>
    <string name="delivery_options">Delivery Options:</string>
    <string name="general_shipping_cost">Shipping Cost :</string>
    <string name="extra_Shipping_cost">Shipping_cost</string>
    <string name="extra_SubTotal">SubTotal</string>
    <string name="extra_Tax_GST">Tax_GST</string>
    <string name="extra_Tax_QST">Tax_QST</string>
    <string name="extra_Total">Total</string>
    <string name="delivery1">express ($50)</string>
    <string name="delivery2">regular ($10)</string>
    <string name="delivery3">no hurry (no cost)</string>
    <string name="cancel_btn">Cancel</string>
    <string name="return_to_main">Return to Menu</string>
    <string name="no_product_selected_message">Select add quantity for atleast one salad</string>
    <string name="salad_price">Salad Price</string>
    <string name="salad_subtotal">Salad Subtotal</string>
    <string name="gst">GST</string>
    <string name="qst">QST</string>
    <string name="action_contact_phone">Contact By Phone</string>
    <string name="action_contact_email">Contact By Email</string>
    <string name="contact_message_phone">By Phone : 5146231234</string>
    <string name="contact_alert">Contact Details</string>
    <string name="contact_message_email">By Email : saladbar@gmail.com</string>
    <string name="total">Total :</string>
    <string name="temp_price">Price as of now before Tax :</string>
    <string name="clear_message">No item selected to clear</string>
    <string name="clear_menu">Menu quantity is reset to 0</string>
    <string name="share_with_friend">Shared with friend</string>
    <string name="more">More Info</string>
    <string name="veg">Veg :</string>
    <string name="gluten">,Gluten Free :</string>
</resources>
